# upv-cli

./: Cargo.toml  LICENSE-MIT  README.md
resources/: UPV_Config.xml
src/: cli.rs  drive.rs  error.rs  main.rs  upv-cli.rs  vpn.rs
