[package]
name = "upv-cli"
version = "0.4.2"
edition = "2024"
authors = ["Alejandro Gómez (algono)"]
description = "A CLI tool for managing VPN and network shares from UPV (Universitat Politècnica de València) on Windows."
repository = "https://github.com/algono/upv-cli"
homepage = "https://github.com/algono/upv-cli"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vpn", "network", "cli", "windows", "upv"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "upv"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
clap_complete = "4.5.52"
